Update notebook and add .gitignore for .env file

--- a/lab-agent-vector-store.ipynb
+++ b/lab-agent-vector-store.ipynb
@@ -46,18 +46,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2868cff1-a3ef-426f-b8d7-7fe89047a5b7",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "from langchain.chains import RetrievalQA\n",
     "from langchain_community.vectorstores import Chroma\n",
-    "from langchain_openai import OpenAI, OpenAIEmbeddings\n",
-    "from langchain_text_splitters import CharacterTextSplitter\n",
-    "from langchain_community.document_loaders import TextLoader"
+    "from langchain_community.document_loaders import TextLoader\n",
+    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
+    "\n",
+    "from langchain_openai import OpenAIEmbeddings, ChatOpenAI\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "from langchain_core.runnables import RunnableParallel, RunnablePassthrough\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -89,19 +94,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "14331eec-fd46-42e0-b6e7-adaf21824ef7",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "llm = OpenAI(temperature=0)"
+    "llm = ChatOpenAI(temperature=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "0b7b772b",
    "metadata": {
     "tags": []
@@ -120,25 +125,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "f2675861",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
+    "# Load documents\n",
     "loader = TextLoader(doc_path)\n",
     "documents = loader.load()\n",
-    "text_splitter = CharacterTextSplitter(chunk_size=1000, chunk_overlap=0)\n",
+    "\n",
+    "# Proper splitter for 2025 LangChain\n",
+    "text_splitter = RecursiveCharacterTextSplitter(\n",
+    "    chunk_size=1000,\n",
+    "    chunk_overlap=0\n",
+    ")\n",
     "texts = text_splitter.split_documents(documents)\n",
     "\n",
+    "# Embeddings + DB - reload API key to ensure it's current\n",
+    "\n",
     "embeddings = OpenAIEmbeddings()\n",
-    "docsearch = Chroma.from_documents(texts, embeddings, collection_name=\"state-of-union\")"
+    "docsearch = Chroma.from_documents(\n",
+    "    texts,\n",
+    "    embeddings,\n",
+    "    collection_name=\"state-of-union\"\n",
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
+   "id": "5e9e383f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_classic.chains import RetrievalQA\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bc5403d4",
    "metadata": {
     "tags": []
@@ -152,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "1431cded",
    "metadata": {
     "tags": []
@@ -164,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "915d3ff3",
    "metadata": {
     "tags": []
@@ -176,23 +203,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "96a2edf8",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Created a chunk of size 2134, which is longer than the specified 1000\n",
-      "Created a chunk of size 2470, which is longer than the specified 1000\n",
-      "Created a chunk of size 1259, which is longer than the specified 1000\n",
-      "Created a chunk of size 1636, which is longer than the specified 1000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "docs = loader.load()\n",
     "ruff_texts = text_splitter.split_documents(docs)\n",
@@ -212,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "eb142786",
    "metadata": {
     "tags": []
@@ -220,13 +236,14 @@
    "outputs": [],
    "source": [
     "# Import things that are needed generically\n",
-    "from langchain.agents import AgentType, Tool, initialize_agent\n",
-    "from langchain_openai import OpenAI"
+    "from langchain_classic.agents import AgentType, initialize_agent\n",
+    "from langchain_core.tools import Tool        # or from langchain.tools import Tool\n",
+    "from langchain_openai import OpenAI\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "850bc4e9",
    "metadata": {
     "tags": []
@@ -249,21 +266,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "fc47f230",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.11/site-packages/langchain_core/_api/deprecation.py:119: LangChainDeprecationWarning: The function `initialize_agent` was deprecated in LangChain 0.1.0 and will be removed in 0.2.0. Use Use new agent constructor methods like create_react_agent, create_json_agent, create_structured_chat_agent, etc. instead.\n",
-      "  warn_deprecated(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Construct the agent. We will use the default agent type here.\n",
     "# See documentation for a full list of options.\n",
@@ -274,48 +282,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "10ca2db8",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.11/site-packages/langchain_core/_api/deprecation.py:119: LangChainDeprecationWarning: The method `Chain.run` was deprecated in langchain 0.1.0 and will be removed in 0.2.0. Use invoke instead.\n",
-      "  warn_deprecated(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3m I should use the State of Union QA System to answer this question\n",
-      "Action: State of Union QA System\n",
-      "Action Input: What did biden say about ketanji brown jackson in the state of the union address?\u001b[0m\n",
-      "Observation: \u001b[36;1m\u001b[1;3m Biden mentioned that he nominated Circuit Court of Appeals Judge Ketanji Brown Jackson to serve on the United States Supreme Court, praising her as one of the nation's top legal minds who will continue Justice Breyer's legacy of excellence.\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3m I now know the final answer\n",
-      "Final Answer: Biden mentioned that he nominated Circuit Court of Appeals Judge Ketanji Brown Jackson to serve on the United States Supreme Court, praising her as one of the nation's top legal minds who will continue Justice Breyer's legacy of excellence.\u001b[0m\n",
-      "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "\"Biden mentioned that he nominated Circuit Court of Appeals Judge Ketanji Brown Jackson to serve on the United States Supreme Court, praising her as one of the nation's top legal minds who will continue Justice Breyer's legacy of excellence.\""
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "agent.invoke(\n",
     "    \"What did biden say about ketanji brown jackson in the state of the union address?\"\n",
@@ -324,41 +296,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "4e91b811",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3m You should always think about the differences between ruff and flake8\n",
-      "Action: Ruff QA System\n",
-      "Action Input: \"Why use ruff over flake8?\"\u001b[0m\n",
-      "Observation: \u001b[33;1m\u001b[1;3m Ruff can replace multiple Flake8 plugins, has a larger rule set, and can automatically fix its own lint violations. It also supports Python versions from 3.7 onwards and does not require the installation of Rust. Additionally, Ruff can be used independently as a linter or formatter, and can be used alongside a type checker for more comprehensive error detection.\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3m I now know the final answer\n",
-      "Final Answer: Ruff offers more features and flexibility compared to flake8, making it a better choice for linting and formatting Python code.\u001b[0m\n",
-      "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'input': 'Why use ruff over flake8?',\n",
-       " 'output': 'Ruff offers more features and flexibility compared to flake8, making it a better choice for linting and formatting Python code.'}"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "agent.invoke(\"Why use ruff over flake8?\")"
    ]
@@ -383,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "f59b377e",
    "metadata": {
     "tags": []
@@ -408,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "8615707a",
    "metadata": {
     "tags": []
@@ -422,40 +365,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "36e718a9",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3m I should use the State of Union QA System to answer this question\n",
-      "Action: State of Union QA System\n",
-      "Action Input: What did biden say about ketanji brown jackson in the state of the union address?\u001b[0m\n",
-      "Observation: \u001b[36;1m\u001b[1;3m Biden mentioned that he nominated Circuit Court of Appeals Judge Ketanji Brown Jackson to serve on the United States Supreme Court, praising her as one of the nation's top legal minds who will continue Justice Breyer's legacy of excellence.\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3m\u001b[0m\n",
-      "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'input': 'What did biden say about ketanji brown jackson in the state of the union address?',\n",
-       " 'output': \" Biden mentioned that he nominated Circuit Court of Appeals Judge Ketanji Brown Jackson to serve on the United States Supreme Court, praising her as one of the nation's top legal minds who will continue Justice Breyer's legacy of excellence.\"}"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "agent.invoke(\n",
     "    \"What did biden say about ketanji brown jackson in the state of the union address?\"\n",
@@ -464,40 +379,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "edfd0a1a",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3m You should always think about the differences between ruff and flake8\n",
-      "Action: Ruff QA System\n",
-      "Action Input: \"Why use ruff over flake8?\"\u001b[0m\n",
-      "Observation: \u001b[33;1m\u001b[1;3m Ruff can replace multiple Flake8 plugins, has a larger rule set, and can automatically fix its own lint violations. It also supports Python versions from 3.7 onwards and does not require the installation of Rust. Additionally, Ruff can be used independently as a linter or formatter, and can be used alongside a type checker for more comprehensive error detection.\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3m\u001b[0m\n",
-      "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'input': 'Why use ruff over flake8?',\n",
-       " 'output': ' Ruff can replace multiple Flake8 plugins, has a larger rule set, and can automatically fix its own lint violations. It also supports Python versions from 3.7 onwards and does not require the installation of Rust. Additionally, Ruff can be used independently as a linter or formatter, and can be used alongside a type checker for more comprehensive error detection.'}"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "agent.invoke(\"Why use ruff over flake8?\")"
    ]
@@ -514,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "d397a233",
    "metadata": {
     "tags": []
@@ -537,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "06157240",
    "metadata": {
     "tags": []
@@ -553,56 +440,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "b492b520",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3m I should use the Ruff QA System to answer the first question and the State of Union QA System to answer the second question.\n",
-      "Action: Ruff QA System\n",
-      "Action Input: What tool does ruff use to run over Jupyter Notebooks?\u001b[0m\n",
-      "Observation: \u001b[33;1m\u001b[1;3m Ruff integrates with nbQA, a tool for running linters and code formatters over Jupyter Notebooks.\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3m I should use the State of Union QA System to answer the second question.\n",
-      "Action: State of Union QA System\n",
-      "Action Input: Did the president mention that tool in the state of the union?\u001b[0m\n",
-      "Observation: \u001b[36;1m\u001b[1;3m\n",
-      "No, the president did not mention a specific tool in the state of the union.\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3m I now know the final answer.\n",
-      "Final Answer: No, the president did not mention a specific tool in the state of the union.\u001b[0m\n",
-      "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'input': 'What tool does ruff use to run over Jupyter Notebooks? Did the president mention that tool in the state of the union?',\n",
-       " 'output': 'No, the president did not mention a specific tool in the state of the union.'}"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "agent.invoke(\n",
     "    \"What tool does ruff use to run over Jupyter Notebooks? Did the president mention that tool in the state of the union?\"\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e19636fc",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -616,7 +475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
